--- a/medsoph_fd/nginx.conf
+++ b/medsoph_fd/nginx.conf
@@ -22,8 +22,7 @@ http {
     index      index.html index.htm index.php;
 
     server {
-        listen    80;
-        listen   localhost:8000;
+        listen    8000 default_server;
         server_name   localhost;
 
         location / {
