--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,10 @@ services:
             - sigma_net
         volumes:
             - ./nginx.conf:/etc/nginx/nginx.conf
+            - /etc/letsencrypt:/etc/letsencrypt
         ports:
-            - 8080:80
+            - 80:80
+            - 443:443
     mongodb:
         image: "mongo"
         restart: "always"
@@ -32,6 +34,8 @@ services:
             ME_CONFIG_MONGODB_ADMINUSERNAME: Sigma
             ME_CONFIG_MONGODB_ADMINPASSWORD: Experi2ma
             ME_CONFIG_MONGODB_SERVER: mongodb
+            ME_CONFIG_BASICAUTH_USERNAME: Sigma
+            ME_CONFIG_BASICAUTH_PASSWORD: Laviosa-n654321
     makkie:
         build: "./makkie"
         ports:
