--- a/makkie_fd/nginx.conf
+++ b/makkie_fd/nginx.conf
@@ -22,8 +22,7 @@ http {
     index      index.html index.htm index.php;
 
     server {
-        listen    80;
-        listen   localhost:7000;
+        listen    7000 default_server;
         server_name   localhost;
 
         location / {
