--- a/medsoph/Dockerfile
+++ b/medsoph/Dockerfile
@@ -1,12 +1,16 @@
 FROM node:latest
 
-WORKDIR /app
+WORKDIR /usr/src/app
 
-COPY package*.json /app
+COPY package*.json .
 
 RUN npm install
 
 COPY . .
+
+RUN mkdir /usr/src/app/.data
+
+RUN mkdir /usr/src/app/.data/images
 
 EXPOSE 4000
 
