--- a/medsoph_fd/public/manifest.json
+++ b/medsoph_fd/public/manifest.json
@@ -19,6 +19,6 @@
     "orientation": "portrait-primary",
     "theme_color": "#ffffff",
     "background_color": "#ffffff",
-    "start_url": "https://medsoph.com",
+    "start_url": "https://medsoph.kennedyc.me",
     "display": "standalone"
 }
