--- a/makkie_fd/nginx.conf
+++ b/makkie_fd/nginx.conf
@@ -19,6 +19,7 @@ http {
     client_max_body_size   16M;
 
     include    /etc/nginx/mime.types;
+    default_type application/octet-stream;
     index      index.html index.htm index.php;
 
     server {
@@ -27,6 +28,7 @@ http {
 
         location / {
             root   /usr/share/nginx/html;
+            try_files $uri $uri/ /index.html;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
