--- a/medsoph_fd/Dockerfile
+++ b/medsoph_fd/Dockerfile
@@ -1,8 +1,8 @@
 FROM node as build
 
-WORKDIR /app
+WORKDIR /usr/src/app
 
-COPY package*.json ./
+COPY package*.json .
 
 RUN npm install
 
@@ -12,7 +12,7 @@ RUN npm run build
 
 FROM nginx
 
-COPY --from=build /app/build usr/share/nginx/html
+COPY --from=build /usr/src/app/build usr/share/nginx/html
 
 EXPOSE 80
 
