--- a/medsoph_fd/nginx.conf
+++ b/medsoph_fd/nginx.conf
@@ -23,10 +23,12 @@ http {
 
     server {
         listen    8000 default_server;
+        default_type application/octet-stream;
         server_name   localhost;
 
         location / {
             root   /usr/share/nginx/html;
+            try_files $uri $uri/ /index.html;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
