--- a/nginx.conf
+++ b/nginx.conf
@@ -25,6 +25,21 @@ http {
     index    index.html index.htm index.php;
 
     server {
+        listen 5506;
+        # listen [::]:80;
+        server_name  localhost;
+        
+        location /api {
+            proxy_pass   http://makkie:5000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+
+    server {
         listen 80;
         listen [::]:80;
         server_name   kennedyc.me  www.kennedyc.me;
